# otto-menu

./: .gitmodules  CMakeLists.txt  README.md
lib/: make_unique.hpp
src/: fx.cpp  fx.hpp  menu.cpp  menu.hpp  mode.cpp  rand.cpp  util.cpp  util.hpp
